[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/FX/FX-19-Laser_Beam.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Guns/W_14_TNG.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Guns/Hold/W_14_TNG_Hold.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Misc/Parts/Outline_Hold.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Guns/W_14_TNG_Outline.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, -3 ), Vector2( 1, -3 ), Vector2( 3, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Laser_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -3 ), Vector2( 3, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Laser_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.075, 0.1, 0.125, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Laser_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.075, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -3 ), Vector2( 3, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Laser_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.075, 0.1, 0.125, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="W_14_TNG_Hold" type="Node2D"]
script = ExtResource( 3 )
gun_num = 14
damage = 13
melee_damage = 20
dmg_type = "Laser"
ammo_max = 650
eject_shell = false
ammo_up_amount = 200

[node name="Melee_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 0.01

[node name="POS_Gun" type="Node2D" parent="."]
position = Vector2( 0, 1 )

[node name="Gun_Sprite" type="Sprite" parent="POS_Gun"]
position = Vector2( 1, -3 )
texture = ExtResource( 2 )
hframes = 2

[node name="Laser_Sprite" type="Sprite" parent="POS_Gun/Gun_Sprite"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
material = SubResource( 1 )
position = Vector2( 10, -1 )
scale = Vector2( 1, 0.75 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -0.5 )
hframes = 5
frame = 2
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 4 )

[node name="Shoot" type="Position2D" parent="POS_Gun/Gun_Sprite/Laser_Sprite"]
position = Vector2( 7, 1.33333 )
scale = Vector2( 1, 1.33333 )

[node name="Shoot_cast" type="RayCast2D" parent="POS_Gun/Gun_Sprite"]
position = Vector2( -11, 0 )
enabled = true
cast_to = Vector2( 1100, 0 )
collision_mask = 4294347672

[node name="Outline" type="Sprite" parent="POS_Gun/Gun_Sprite"]
show_behind_parent = true
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="POS" type="Node2D" parent="POS_Gun"]

[node name="Throw" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 19, -3 )

[node name="Shoot" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 13, -3 )

[node name="Shell" type="Position2D" parent="POS_Gun/POS"]
visible = false
position = Vector2( 0, -4 )

[node name="Raycast" type="Node2D" parent="POS_Gun"]

[node name="Melee" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 0, -1 )
cast_to = Vector2( 19, 0 )
collision_mask = 4294348184

[node name="Throw" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 35, 0 )
collision_mask = 4294348184

[node name="Shoot" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 4294347672

[node name="Melee_Area" type="Area2D" parent="POS_Gun"]
collision_layer = 0
collision_mask = 4294347672

[node name="CollisionShape2D" type="CollisionShape2D" parent="POS_Gun/Melee_Area"]
position = Vector2( 10, -5 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Click = SubResource( 3 )
anims/Idle = SubResource( 6 )
anims/Melee = SubResource( 4 )
anims/Shoot = SubResource( 5 )

[connection signal="timeout" from="Melee_Timer" to="." method="_on_Melee_Timer_timeout"]
[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
